[tool.poetry]
name = "dhos-async-adapter"
version = "0.0.1"
description = "Polaris Async Adapter"
authors = ["Jon Daly <jonathan.daly@sensynehealth.com>"]
keywords = ["Async", "Kombu", "RabbitMQ", "Polaris"]
repository = "https://github.com/polaris-foundation/polaris-async-adapter"

[tool.poetry.dependencies]
python = "^3.9"
draymed = "2.*"
environs = "9.*"
kombu-batteries-included = "1.*"
marshmallow = "3.*"
python-jose = "3.*"
requests = "2.*"
she-logging = "1.*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coloredlogs = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = "*"
pytest-freezegun = "*"
pytest-mock = "*"
requests_mock = "1.8.*"
safety = "*"
tox = "*"
types-mock = "*"
types-requests = "*"

[tool.mypy]
namespace_packages=true
ignore_missing_imports=false
disallow_untyped_defs=true

[[tool.mypy.overrides]]
module = [
    "environs",
    "pytest",
    "kombu.*",
    "requests_mock",
    "pytest_mock",
    "jose",
    "_pytest.*"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = ["_pytest", "behave", "clients", "draymed", "environs", "helpers", "jose", "kombu", "kombu_batteries_included", "marshmallow", "mock", "pytest", "pytest_mock", "reporting", "reportportal_behave", "requests", "requests_mock", "she_logging"]

[tool.black]
line-length = 88
target-version = ["py39"]
